--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <br />
     <br />
     <label for="">User token to send to (stored in DB):</label>
+    <br />
     <textarea
       name="usertoken"
       id="usertoken"
       cols="80"
-      rows="2"
+      rows="3"
       placeholder="User Token (check console)"
     ></textarea>
     <br />
@@ -38,7 +39,7 @@
     <!-- <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-analytics.js"></script> -->
     <!-- <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-messaging.js"></script> -->
 
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
           navigator.serviceWorker.register("/firebase-messaging-sw.js").then(
@@ -56,11 +57,6 @@
           );
         });
       }
-    </script>
-
-    <script>
-      //
-      console.log("EOF - index");
-    </script>
+    </script> -->
   </body>
 </html>
